<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I am a Button</string>
    <string name="login">Login</string>
    <string name="login_hint">login name</string>
    <string name="password">Password</string>
    <string name="switch_text">What does this do?</string>
    <string name="dialog_message">Want to finish this activity?</string>
    <string name="dialog_title">List Item Activity</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="switch_on">Switch in ON</string>
    <string name="switch_off">Switch is Off</string>
    <string name="checkbox_response">Here is my response</string>
    <string name="chat">Start Chat</string>
    <string name="sendChat">Send</string>
    <string name="toolbarButon">TestToolbar</string>
    <string name="snackNotification">You have selected Event icon</string>
    <string name="alertDialogTitle">Do you want to go back</string>
    <string name="title_activity_test_toolbar">ToolBar</string>
</resources>
